--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -8,8 +8,7 @@ body {
   justify-content: space-between;
   align-items: center;
   margin: 0;
-  padding: 0px 300px;
-  background-color: lightgrey;
+  background-color: #1f2937;
 }
 
 /* HEADER SECTION */
@@ -20,7 +19,7 @@ body {
   align-items: center;
   flex-grow: 1;
   width: 100%;
-  padding: 20px;
+  padding: 20px 320px;
   background-color: #1f2937;
 }
 
@@ -61,7 +60,7 @@ li {
   align-items: center;
   background-color: #1f2937;
   width: 100%;
-  padding: 20px;
+  padding: 20px 320px;
   gap: 100px;
 }
 
@@ -105,44 +104,132 @@ li {
   vertical-align: middle;
 }
 
-
 /* Section 2 */
 
 .random-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    background-color: white;
-    color: #1f2937;
-    font-size: 36px;
-    font-weight: 800;
-    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: 800;
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .images {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    gap: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding: 20px 320px;
+  gap: 15px;
 }
 
 .img img {
-    object-fit: cover;
-    width: 250px;
-    height: 250px;
-    border-radius: 16px;
+  object-fit: cover;
+  width: 250px;
+  height: 250px;
+  border-radius: 16px;
 }
 
 .img {
-    width: 25%;
-    text-align: center;
-    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  width: 25%;
+  text-align: center;
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+/* Section 3 */
+
+.quote-sec {
+  display: flex;
+  flex-direction: column;
+  background-color: #e5e7eb;
+  width: 100%;
+  padding: 110px 540px;
+}
+
+.quote {
+  font-style: italic;
+  font-weight: 300;
+  font-size: 36px;
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #1f2937;
+  margin: 0;
+  padding: 0;
+}
+
+.author {
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  text-align: end;
+  margin: 5px 30px;
+}
+
+/* Section 4 */
+
+.cta-sec {
+  width: 100%;
+  background-color: white;
+  padding: 100px 400px;
+}
+
+.blue-sec {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
+  background-color: #3882f6;
+  border-radius: 5px;
+  margin: 10px 100px;
+  color: white;
+  padding: 30px;
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.cta-title {
+  font-weight: bold;
+  font-size: 20px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.cta-text {
+  margin: 0px;
+}
+
+.signup-button {
+  background-color: #3882f6;
+  font-weight: bold;
+  color: #f9faf8;
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  border-radius: 5px;
+  border: 2px solid white;
+  padding: 6px 30px;
+}
+
+
+/* Footer */
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #1f2937;
+  color: #f9faf8;
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 12px;
+  padding: 10px;
 }
